--- a/checkpoint.html
+++ b/checkpoint.html
@@ -3,58 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Page</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Optional CSS file for styling -->
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <section id="home">
-        <h1>Welcome to My Portfolio</h1>
-        <p>This page showcases information about me and my work.</p>
-    </section>
+    <main>
+        <section id="home">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Discover my projects and skills.</p>
+        </section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Write a brief introduction about yourself here.</p>
-    </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I am a web developer with a passion for creating intuitive and dynamic user experiences.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3Rfh9hs8MUc?si=7hVOHhrGHuQI2MbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
 
-    <section id="work">
-        <h2>My Work</h2>
-        <ul>
-            <li>Project 1</li>
-            <li>Project 2</li>
-            <li>Project 3</li>
-        </ul>
-    </section>
+        <section id="work">
+            <h2>My Work</h2>
+            <ul>
+                <li>Project 1: <a href="project1.html">Link to Project 1</a></li>
+                <li>Project 2: <a href="project2.html">Link to Project 2</a></li>
+                <li>Project 3: <a href="project3.html">Link to Project 3</a></li>
+            </ul>
+        </section>
 
-    <section id="resume">
-        <h2>Resume</h2>
-        <p>Include a link to your resume or a brief summary of your experience.</p>
-    </section>
+        <section id="resume">
+            <h2>Resume</h2>
+            <p>Download my resume: <a href="resume.pdf" download>My Resume</a></p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Year</th>
+                        <th>Experience</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2024</td>
+                        <td>Web Developer at ....</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
 
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
-            <label for="message">Message:</label>
-            <textarea id="message" name="message"></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <form action="#" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2024 MOUHEB. All rights reserved.</p>
+        <p>&copy; 2024 My Portfolio</p>
+        <p>Follow me on <a href="https://twitter.com">Twitter</a> | <a href="https://linkedin.com">LinkedIn</a></p>
     </footer>
 </body>
 </html>
