--- a/checkpoint.html
+++ b/checkpoint.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Optional CSS file for styling -->
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#work">My Work</a></li>
                 <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Contact Me</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +26,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a web developer with a passion for creating intuitive and dynamic user experiences.</p>
+            <p>I am a web developer passionate about creating dynamic and user-friendly experiences.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/3Rfh9hs8MUc?si=7hVOHhrGHuQI2MbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
@@ -52,8 +51,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>2024</td>
-                        <td>Web Developer at ....</td>
+                        <td>2023</td>
+                        <td>Web Developer at .....</td>
                     </tr>
                 </tbody>
             </table>
@@ -78,7 +77,7 @@
 
     <footer>
         <p>&copy; 2024 My Portfolio</p>
-        <p>Follow me on <a href="https://twitter.com">Twitter</a> | <a href="https://linkedin.com">LinkedIn</a></p>
+        <p>Follow me on <a href="https://twitter.com" target="_blank">Twitter</a> | <a href="https://linkedin.com" target="_blank">LinkedIn</a></p>
     </footer>
 </body>
 </html>
