--- a/checkpoint.html
+++ b/checkpoint.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="checkpoint.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#work">My Work</a></li>
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact Me</a></li>
+                <li class="nav"><a href="#home">Home</a></li>
+                <li class="nav"><a href="#about">About Me</a></li>
+                <li class="nav"><a href="#work">My Work</a></li>
+                <li class="nav"><a href="#resume">Resume</a></li>
+                <li class="nav"><a href="#contact">Contact Me</a></li>
             </ul>
         </nav>
     </header>
@@ -25,8 +27,8 @@
         </section>
 
         <section id="about">
-            <h2>About Me</h2>
-            <p>I am a web developer passionate about creating dynamic and user-friendly experiences.</p>
+            <h2 >About Me</h2>
+            <p >I am a web developer passionate about creating dynamic and user-friendly experiences.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/3Rfh9hs8MUc?si=7hVOHhrGHuQI2MbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
